added a background andd other files

--- a/src/app/goal/goal.component.css
+++ b/src/app/goal/goal.component.css
@@ -1,5 +1,5 @@
-.chelsea{
+.container{
   background-image: url("https://wpamelia.com/wp-content/uploads/2019/02/4k-wallpaper-architecture-background-1308624.jpg");
-  height:1000px;
   color:white;
+  height:600px;
 }
