--- a/src/app/goal/goal.component.html
+++ b/src/app/goal/goal.component.html
@@ -22,5 +22,14 @@
       <app-goal-form (addGoal)="addNewGoal($event)"></app-goal-form>
  </div>
   </div>
+
   <p *ngIf='goals.length > 5'>You have too many goals</p>
+  <div class="row">
+    <blockquote class="blockquote text-center">
+      <p class="mb-0">{{quote.kot}}</p>
+      <a href ="{{quote.url}}"> {{quote.url}}</a>
+      <!-- <p>{{quote.url}}</p> -->
+      <footer class="blockquote-footer"><cite>{{quote.auth}}</cite></footer>
+    </blockquote>
+  </div>
 </div>
